# tauri-leptos-example

./: .gitignore  Cargo.toml  LICENSE.md  README.md
backend/: Cargo.toml  tauri.conf.json
ui/: Cargo.toml  Trunk.toml  index.html  input.css  tailwind.config.js
ui/src/: greeting.rs  main.rs
