[package]
name = "tauri-leptos-example-ui"
version = "0.1.0"
description = "A Tauri Example UI in Leptos"
authors = ["Akito Nozaki"]
license = "MIT"
repository = "https://github.com/anozaki/tauri-leptos-example"
default-run = "tauri-leptos-example-ui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures = "0.3.29"
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }

[profile.release]
opt-level = 3
strip = "debuginfo"
